--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "require-dev": {
         "nunomaduro/larastan": "^1.0",
         "phpstan/phpstan": "^1.0",
+        "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^7.0|^9.0",
         "orchestra/testbench": "^4.0|^6.0|^7.0"
     },
