--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         "php": "^7.2|^8.0|^8.1"
     },
     "require-dev": {
+        "laravel/pint": "^0.2.3",
         "nunomaduro/larastan": "^1.0",
         "phpstan/phpstan": "^1.0",
-        "friendsofphp/php-cs-fixer": "^3.0",
         "phpunit/phpunit": "^7.0|^9.0",
         "orchestra/testbench": "^4.0|^6.0|^7.0"
     },
