--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,8 @@
 {
   "recommendations": [
-    "bmewburn.vscode-intelephense-client",
+    "DEVSENSE.phptools-vscode",
+    "open-southeners.php-support-utils",
+    "open-southeners.laravel-pint",
     "ikappas.composer",
     "pixelfear.composer-links",
     "editorconfig.editorconfig",
