Fix composer autoload

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,11 @@
     },
     "autoload": {
         "psr-4": {
-            "OpenSoutheners\\PhpPackage\\": "src",
+            "OpenSoutheners\\PhpPackage\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
             "OpenSoutheners\\PhpPackage\\Tests\\": "tests"
         }
     },
