--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
         }
     ],
     "require": {
-        "php": "^7.2|^8.0|^8.1"
+        "php": "^7.3|^8.0|^8.1"
     },
     "require-dev": {
         "nunomaduro/larastan": "^1.0",
         "phpstan/phpstan": "^1.0",
-        "phpunit/phpunit": "^7.0|^9.0",
-        "orchestra/testbench": "^4.0|^6.0|^7.0"
+        "phpunit/phpunit": "^9.0",
+        "orchestra/testbench": "^6.0|^7.0"
     },
     "autoload": {
         "psr-4": {
