--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -60,6 +60,7 @@ jobs:
 
       - name: Deploy coverage to codacy
         uses: codacy/codacy-coverage-reporter-action@v1
+        if: matrix.php == '8.1' && matrix.laravel == '9.*'
         with:
           # project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           api-token: ${{ secrets.CODACY_API_TOKEN }}
