make even easier the search & replace process

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "packagist_package_here",
+    "name": "open-southeners/packagist_package_here",
     "description": "and_description_here",
     "license": "MIT",
     "keywords": [
