--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
 /vendor/
 /node_modules
 composer.lock
-.phpunit.result.cache
 phpunit.xml
 .DS_Store
 coverage
 clover.xml
-.coverage-cache
+.phpunit.cache
