--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
         "php": "^8.0|^8.1|^8.2"
     },
     "require-dev": {
-        "nunomaduro/larastan": "^1.0",
+        "nunomaduro/larastan": "^2.0",
         "phpstan/phpstan": "^1.0",
-        "phpunit/phpunit": "^9.0",
-        "orchestra/testbench": "^6.0|^7.0"
+        "phpunit/phpunit": "^9.0|^10.0",
+        "orchestra/testbench": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
