--- a/composer.json
+++ b/composer.json
@@ -19,10 +19,10 @@
         }
     ],
     "require": {
-        "php": "^8.0 || ^8.1 || ^8.2"
+        "php": "^8.0"
     },
     "require-dev": {
-        "nunomaduro/larastan": "^2.0",
+        "larastan/larastan": "^2.0",
         "orchestra/testbench": "^7.0 || ^8.0",
         "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": "^9.0 || ^10.0"
