increase phpstan level to max

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,7 +6,6 @@ parameters:
     paths:
         - src
 
-    # The level 8 is the highest level
-    level: 5
+    level: "max"
 
     checkMissingIterableValueType: false
