--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,18 +9,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: 🏗 Checkout code
+        uses: actions/checkout@v4
 
-      - name: Get release info
+      - name: 🏗 Get release info
         id: query-release-info
-        uses: release-flow/keep-a-changelog-action@v2
+        uses: release-flow/keep-a-changelog-action@v3
         with:
           command: query
           version: latest
 
-      - name: Publish to Github releases
-        uses: softprops/action-gh-release@v1
+      - name: 🚀 Publish to Github releases
+        uses: softprops/action-gh-release@v2
         with:
           body: ${{ steps.query-release-info.outputs.release-notes }}
+          make_latest: ${{ $GITHUB_REF_NAME == 'main' && true || false }}
           # prerelease: true
           # files: '*.vsix'
