--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,12 @@
     },
     "require-dev": {
         "larastan/larastan": "^2.0",
-        "orchestra/testbench": "^7.0 || ^8.0",
+        "orchestra/testbench": "^7.0 || ^8.0 || ^9.0",
         "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": "^9.0 || ^10.0"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "OpenSoutheners\\PhpPackage\\": "src"
