--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,11 +12,8 @@ jobs:
         os: [ ubuntu-latest ]
         php: [ 8.1, 8.2, 8.3 ]
         stability: [prefer-lowest, prefer-stable]
-        laravel: [ 9.*, 10.*, 11.* ]
+        laravel: [ 10.*, 11.* ]
         include:
-          - laravel: 9.*
-            testbench: 7.*
-
           - laravel: 10.*
             testbench: 8.*
 
