--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.1, 8.2, 8.3 ]
-        stability: [prefer-lowest, prefer-stable]
+        stability: [ prefer-stable ]
         laravel: [ 10.*, 11.* ]
         include:
           - laravel: 10.*
@@ -19,6 +19,9 @@ jobs:
 
           - laravel: 11.*
             testbench: 9.*
+        exclude:
+          - php: 8.1
+            laravel: 11.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
