--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,6 @@
 name: tests
 
-on: [ push, pull_request ]
+on: [push, pull_request]
 
 jobs:
   test:
@@ -9,10 +9,10 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-latest ]
-        php: [ 8.1, 8.2, 8.3 ]
-        stability: [ prefer-stable ]
-        laravel: [ 10.*, 11.* ]
+        os: [ubuntu-latest]
+        php: [8.1, 8.2, 8.3]
+        stability: [prefer-stable]
+        laravel: [10.*, 11.*]
         include:
           - laravel: 10.*
             testbench: 8.*
@@ -55,9 +55,10 @@ jobs:
         run: vendor/bin/phpunit -c phpunit.coverage.dist.xml
 
       - name: 🚀 Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          flags: php${{ matrix.php }}-laravel${{ matrix.laravel }}
           files: ./clover.xml
           fail_ci_if_error: true
           # verbose: true
